** Mention :reek:smell_name disables the named smell for a class, module or method
** Mention :reek:smell_name:{...} for more detailed configuration
* Additional config file(s) can be specified:
** on the command-line using -c
** via Reek::Rake::Task in the rakefile

=== Minor Changes
* Duplication can be configured to ignore specific calls
* NestedIterators is now more configurable:
** Option to specify permitted nesting depth (#14)
** Option to ignore certain iterator methods

== 1.2.7.3 (2010-03-29)

=== Minor Changes
* UtilityFunction no longer reported when local method called in param initializer (#60)
* Spaces removed from smell class names in report output
* Masked smells are no longer reported
** the -a command-line option has been removed
** some methods on Examiner are now deprecated
* DataClump no longer needs infinite memory for large classes (#57 again)

== 1.2.7.2 (2010-03-05)

=== Minor Changes
* Number of masked smells is no longer shown in report headers
* Masked smells are no longer listed in --yaml reports
* DataClump no longer needs infinite memory for large classes (#57)
* DataClump reports the names of the offending methods in the YAML report
* UncommunicativeMethodName now accepts operator names (+, -, ...)
* Uncommunicative Name now warns about uppercase letters in method & var names

== 1.2.7.1 (2010-02-03)

=== Minor Changes
* Fixed crash on a case statement with no condition (#58)

== 1.2.7 (2010-02-01)

=== Major Changes
* New option --yaml reports smells in YAML format
* Now require 'reek/rake/task' to use the rake task
* Now require 'reek/spec' to use the Rspec matchers
* Developer API completely revised and documented

=== Minor Changes
* New smell: Irresponsible Module (has no meaningful comment)
* ControlCouple no longer checks arguments yielded to blocks
* FeatureEnvy and UtilityFunction are now subclasses of a new smell: LowCohesion
* NestedIterators now reports the nesting depth